--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/infra/http/server.ts"
+  },
+  "prisma": {
+    "schema": "src/infra/database/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.11.17",
+    "@prisma/client": "^4.7.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "socket.io": "^4.5.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.17",
+    "prisma": "^4.7.1",
+    "ts-node-dev": "^2.0.0",
     "vitest": "^0.26.0"
   }
 }
