--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "start": "tsnd --transpile-only --respawn --watch node_modules src/infra/http/server.ts"
+    "start": "nodemon src/infra/http/server.ts"
   },
   "prisma": {
     "schema": "src/infra/database/prisma/schema.prisma"
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.20",
     "socket.io": "^4.5.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
